--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     background-color: #fff;
     color: black;
 
-    margin: auto;
     text-align: center;
 }
 
@@ -67,6 +66,7 @@ img {
 footer {
     position: fixed;
     bottom: 0px;
+    width: 100%;
 }
 
 #footer {
