--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ li {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 300;
     color: black;
-    opacity: 1;
+    opacity: 0.9;
     text-decoration: none;
 }
 
@@ -40,26 +40,29 @@ form {
 #searchbar {
     height: 46px;
     width: 582px;
-    margin: auto;
+    margin-top: 25px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border-radius: 24px;
-    border: 1px solid #def1ef;
-    box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+    border: 1px solid #dfe1e5;
+    box-shadow: none;
 }
 
 #searchbar:hover {
-    border-color: rgba(223,225,229,0);
+    box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+    border-color: rgba(223,225,229,0)
 }
 
 .button {
     height: 35px;
-    margin: 10px 10px 20px 0px;
+    margin: 20px 10px 20px 0px;
     cursor: pointer;
     border-radius: 4px;
     background-color: #f2f2f2;
     border: 1px solid #f2f2f2;
     color: #5F6368;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    padding: 0 16px;
 }
 
 .button:hover {
@@ -81,6 +84,25 @@ img {
     margin-top: 5px;
     padding-top: 100px;
     padding-bottom: 3px;
+}
+
+.grid {
+    width: 20px;
+    padding: 0;
+    opacity: 0.8;
+}
+
+.grid:hover {
+    opacity: 1;
+}
+
+.pp {
+    border-radius: 50%;
+    padding: 0;
+}
+
+.pp:hover {
+    opacity: 1;
 }
 
 #country {
